reafctoring entity relations and fixing jpa queries