@@ -3,7 +3,9 @@ package dev.jakubw.omnisentry.service.internal;
 import dev.jakubw.omnisentry.dto.AccountDto;
 import dev.jakubw.omnisentry.dto.AccountExtraDto;
 import dev.jakubw.omnisentry.models.AccountEntity;
+import dev.jakubw.omnisentry.models.ConnectionEntity;
 import dev.jakubw.omnisentry.repos.AccountRepository;
+import dev.jakubw.omnisentry.repos.ConnectionRepository;
 import dev.jakubw.omnisentry.services.SaltEdgeService;
 import dev.jakubw.omnisentry.services.internal.AccountService;
 import org.junit.jupiter.api.DisplayName;
@@ -14,7 +16,6 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import reactor.core.publisher.Flux;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -33,19 +34,26 @@ public class AccountServiceTest {
     private AccountRepository accountRepository;
 
     @Mock
+    private ConnectionRepository connectionRepository;
+
+    @Mock
     private SaltEdgeService saltEdgeService;
 
     @InjectMocks
     private AccountService accountService;
 
     @Captor
-    private ArgumentCaptor<AccountEntity> accEntityCaptor;
+    private ArgumentCaptor<List<AccountEntity>> accEntityListCaptor;
 
     @Test
     @DisplayName("Should save new account when it does not exist")
-    public void shouldSaveNotExistingAccount(){
+    public void shouldSaveNotExistingAccount() {
         // Given
         String id = "123";
+
+        ConnectionEntity connection = ConnectionEntity.builder()
+                .saltEdgeConnectionId(id)
+                .build();
 
         AccountExtraDto extraDto = new AccountExtraDto("IBAN123", "BBAN123", "active", "John");
 
@@ -61,22 +69,42 @@ public class AccountServiceTest {
                 LocalDate.now().toString()
         );
 
-        when(accountRepository.findBySaltEdgeAccountId(id)).thenReturn(Optional.empty());
-        when(saltEdgeService.getAccounts(id)).thenReturn(Flux.just(newAccount));
+        AccountEntity savedEntity = AccountEntity.builder()
+                .saltEdgeAccountId(id)
+                .name("John")
+                .balance(BigDecimal.ONE)
+                .currency("EUR")
+                .nature("nature")
+                .iban("IBAN123")
+                .bban("BBAN123")
+                .holderName("John")
+                .status("active")
+                .createdAt(LocalDate.now().toString())
+                .updatedAt(LocalDate.now().toString())
+                .connection(connection)
+                .build();
 
-        when(accountRepository.findAllByConnectionId(id)).thenReturn(Collections.emptyList());
+        when(connectionRepository.findById(id)).thenReturn(Optional.of(connection));
+        when(saltEdgeService.getAccounts(id)).thenReturn(List.of(newAccount));
+        when(accountRepository.findAllById(List.of(id))).thenReturn(Collections.emptyList());
+
+        when(accountRepository.findAllByConnectionSaltEdgeConnectionId(id)).thenReturn(List.of(savedEntity));
 
         // When
         List<AccountDto> dtoList = accountService.getAccounts(id);
 
         // Then
-        verify(accountRepository).save(accEntityCaptor.capture());
-        AccountEntity captured = accEntityCaptor.getValue();
+        verify(accountRepository).saveAll(accEntityListCaptor.capture());
 
+        List<AccountEntity> savedEntities = accEntityListCaptor.getValue();
+        assertThat(savedEntities).hasSize(1);
+
+        AccountEntity captured = savedEntities.get(0);
         assertThat(captured.getSaltEdgeAccountId()).isEqualTo(newAccount.getSaltEdgeAccountId());
-        assertThat(captured.getConnectionId()).isEqualTo(newAccount.getConnectionId());
         assertThat(captured.getStatus()).isEqualTo("active");
         assertThat(captured.getHolderName()).isEqualTo("John");
-        assertThat(dtoList.contains(newAccount));
+
+        assertThat(dtoList).hasSize(1);
+        assertThat(dtoList.get(0).getSaltEdgeAccountId()).isEqualTo(id);
     }
 }
